php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #50258 typos in error strings
Submitted: 2009-11-21 19:31 UTC Modified: 2009-11-21 19:43 UTC
From: atomo64 at gmail dot com Assigned:
Status: Closed Package: SOAP related
PHP Version: 5.2.11 OS:
Private report: No CVE-ID: None
 [2009-11-21 19:31 UTC] atomo64 at gmail dot com
Description:
------------
I found the following typos on the source code:

s/requred/required/:
'uri' option is requred in nonWSDL mode
'location' option is requred in nonWSDL mode
'location' and 'uri' options are requred in nonWSDL mode

s/propery/property/:
SOAP-ERROR: Encoding: SoapVar hasn't 'enc_type' propery



Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2009-11-21 19:43 UTC] svn@php.net
Automatic comment from SVN on behalf of felipe
Revision: http://svn.php.net/viewvc/?view=revision&revision=291120
Log: - Fixed bug #50258 (typos in error strings)
 [2009-11-21 19:43 UTC] felipe@php.net
This bug has been fixed in SVN.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Mon Sep 28 04:00:02 2026 UTC