- Fixed bug #50258 (typos in error strings)